# agent-hub

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  IFLOW.md  LICENSE  NEXUS.md  NEXUS.md.backup  README.md  README_CN.md  README_EN.md  SKILL.template.md  global_ai_skills_report.md  pyproject.toml  requirements.txt  setup.sh
.agents/workflows/: prototype.md  research.md  write.md
.antigravity/skills/: agency-architecture-atlas  agency-bin-bb-browser  agency-bin-chrome-devtools  agency-bin-defuddle  agency-bin-lightpanda  agency-bin-memory  agency-bin-opencli  agency-bin-update  agency-bin-xiaohongshu-mcp  agency-deep-researcher  agency-engineering-ai-engineer  agency-github-researcher  agency-magicqm-growth-hacker  agency-notebook-grounding  agency-skill-armorer  agency-social-xhs-manager  agency-technical-cofounder  agency-testing-reality-checker  agency-viral-writer
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  skill_request.md
.github/workflows/: ci.yml
.iflow/: AI_HINTS_SPEC.md
config/: mcp_servers.json
docs/: configuration.md  principles.md  skills.md
knowledge/: user_profile.template.json  vector_store.py
scripts/: consolidate_schema.py  generate_tools_manifest.py  optimize_schema.py  path_doctor.py  sync_knowledge.py  sync_skills.py
scripts/kernel_tools/: cognitive_schema_compiler.py  nexus_protocol_upgrade.py  sync_armory.py
scripts/tests/: test_nexus_executor.py  test_semantic_router.py  test_tools_manifest.py
skills/agency-bin-gh/: SCHEMA.json
tools/: TOOL_MAP.md  mcp_manifest.json
(+86 files in other folders)
