[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-hub"
version = "1.0.0"
description = "Write JSON, not glue code. Turn any CLI tool into an AI skill."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Agent Hub Team"}
]
keywords = ["ai", "agent", "mcp", "cli", "semantic-router"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jsonschema>=4.0.0",
    "requests>=2.28.0",
    "mcp>=1.0.0"
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "numpy>=1.24.0"
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
ah = "bin.semantic_router:main"
nexus = "bin.semantic_router:main"

[project.urls]
Homepage = "https://github.com/tong20242100/agent-hub"
Repository = "https://github.com/tong20242100/agent-hub"

[tool.setuptools.packages.find]
where = ["."]
include = ["bin*", "knowledge*", "skills*"]

[tool.setuptools.package-data]
bin = ["py.typed"]
knowledge = ["*.json", "*.md"]
